<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_module</name>
  <version>1.0.0</version>
  <description>
    Safety module for the robotnik platform.
  </description>

  <maintainer email="rmartin@robotnik.es">Rafael Martin</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rclpy</exec_depend> -->

  <!-- <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>
  <exec_depend>sick_safetyscanners</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export>
    Other tools can request additional information be placed here

  </export> -->
</package>
